--- a/bank-link-backend/src/main/resources/application.properties
+++ b/bank-link-backend/src/main/resources/application.properties
@@ -1,2 +1,26 @@
+# MariaDB Database Configuration
+spring.datasource.url=jdbc:mariadb://localhost:3306/bank_link_db
+spring.datasource.username=vundla
+spring.datasource.password=Mv@20217$
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+# Server Configuration - Changed to port 8081
+server.port=${PORT:8081}
 spring.application.name=bank-link-backend
-server.port=8080
+
+# CORS Configuration
+spring.web.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:3000,http://localhost:8081}
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+# Logging
+logging.level.com.banklink=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+server.port=8085
